--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -1,20 +1,22 @@
 import { Meta } from "@storybook/blocks";
 
-export const RightArrow = () => <svg 
-    viewBox="0 0 14 14" 
-    width="8px" 
-    height="14px" 
-    style={{ 
-      marginLeft: '4px',
-      display: 'inline-block',
-      shapeRendering: 'inherit',
-      verticalAlign: 'middle',
-      fill: 'currentColor',
-      'path fill': 'currentColor'
+export const RightArrow = () => (
+  <svg
+    viewBox="0 0 14 14"
+    width="8px"
+    height="14px"
+    style={{
+      marginLeft: "4px",
+      display: "inline-block",
+      shapeRendering: "inherit",
+      verticalAlign: "middle",
+      fill: "currentColor",
+      "path fill": "currentColor",
     }}
->
-  <path d="m11.1 7.35-5.5 5.5a.5.5 0 0 1-.7-.7L10.04 7 4.9 1.85a.5.5 0 1 1 .7-.7l5.5 5.5c.2.2.2.5 0 .7Z" />
-</svg>
+  >
+    <path d="m11.1 7.35-5.5 5.5a.5.5 0 0 1-.7-.7L10.04 7 4.9 1.85a.5.5 0 1 1 .7-.7l5.5 5.5c.2.2.2.5 0 .7Z" />
+  </svg>
+);
 
 <Meta title="Installation" />
 
@@ -43,7 +45,7 @@ export const RightArrow = () => <svg
     ## Basic Usage
 
     ```typescript
-      import { R3FDomAlign } from 'r3f-dom-alignment';
+      import { R3FDomMasonry } from 'r3f-dom-alignment';
 
       const items = [
         {
@@ -86,10 +88,11 @@ export const RightArrow = () => <svg
 
       function App() {
         return (
-          <R3FDomAlign items={items} />
+          <R3FDomMasonry items={items} />
         );
       }
     ```
+
   </div>
 </div>
 
