fix: mdxの文字変更

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -33,11 +33,11 @@ export const RightArrow = () => (
     # Usage
 
     ```
-      pnpm add r3f-dom-alignment
+      npm i r3f-dom-masonry
       # or
-      npm i r3f-dom-alignment
+      pnpm add r3f-dom-masonry
       # or
-      yarn add r3f-dom-alignment
+      yarn add r3f-dom-masonry
     ```
 
   </div>
