fix: 不要なファイル削除とmdx編集

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -45,44 +45,65 @@ export const RightArrow = () => (
     ## Basic Usage
 
     ```typescript
-      import { R3FDomMasonry } from 'r3f-dom-alignment';
+      import { R3FDomMasonry } from 'r3f-dom-masonry';
 
       const items = [
         {
-          height: 250,
           element: <div>Dom1</div>,
         },
         {
-          height: 250,
           element: <div>Dom2</div>,
         },
         {
-          height: 250,
           element: <div>Dom3</div>,
         },
         {
-          height: 250,
           element: <div>Dom4</div>,
         },
         {
-          height: 250,
           element: <div>Dom5</div>,
         },
         {
-          height: 250,
           element: <div>Dom6</div>,
         },
         {
-          height: 250,
           element: <div>Dom7</div>,
         },
         {
-          height: 250,
           element: <div>Dom8</div>,
         },
         {
-          height: 250,
           element: <div>Dom9</div>,
+        },
+        {
+          element: <div>Dom10</div>,
+        },
+        {
+          element: <div>Dom11</div>,
+        },
+        {
+          element: <div>Dom12</div>,
+        },
+        {
+          element: <div>Dom13</div>,
+        },
+        {
+          element: <div>Dom14</div>,
+        },
+        {
+          element: <div>Dom15</div>,
+        },
+        {
+          element: <div>Dom16</div>,
+        },
+        {
+          element: <div>Dom17</div>,
+        },
+        {
+          element: <div>Dom18</div>,
+        },
+        {
+          element: <div>Dom19</div>,
         },
       ];
 
