change: mdx & Readme

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -18,14 +18,16 @@ export const RightArrow = () => (
   </svg>
 );
 
-<Meta title="Installation" />
+<Meta title="Introduction" />
 
 <div className="sb-container">
   <div className='sb-section-title'>
     # First
-    Firstly, I'd like to acknowledge that this resource is not solely my own creation. It is a React component version of the excellent 'three-dom-alignment' resource originally created by NakanoMisaki. I created this resource with the intention that it could be utilized for various general expressions in web design. Feel free to make use of it.
-    - origin: <a href="https://mofu-dev.com/blog/three-dom-alignment" target="_blank">three-dom-alignment</a>
-
+    Firstly, I'd like to acknowledge that this resource is not entirely my own creation. It is a React component version of the excellent 'three-dom-alignment' resource, originally created by Ms. NakanoMisaki. I developed this component with the aim of enabling various general applications in web design. Feel free to make use of it.
+    Additionally, I have implemented the Masonry layout by referencing the resource "react-plock" created by Mr. Renato Pozzi. This is one of those exceptional libraries that come with all the features I was looking for.
+    Lastly, you can find the original articles or source codes at the following links.
+    - origin1 : <a href="https://mofu-dev.com/blog/three-dom-alignment" target="_blank">three-dom-alignment</a>
+    - origin2 : <a href="https://github.com/askides/react-plock" target="_blank">react-plock</a>
   </div>
 </div>
 <div className="sb-container">
@@ -34,10 +36,10 @@ export const RightArrow = () => (
 
     ```
       npm i r3f-dom-masonry
-      # or
-      pnpm add r3f-dom-masonry
-      # or
-      yarn add r3f-dom-masonry
+    # or
+    pnpm add r3f-dom-masonry
+    # or
+    yarn add r3f-dom-masonry
     ```
 
   </div>
